# Huffman-Compressor

./: .gitignore  README.md
Huffman_Compressor/: CMakeLists.txt
Huffman_Compressor/compressed Files/: blackblue.hf  img.hf
Huffman_Compressor/header/: Argument.h  Huffman_definitions.h
Huffman_Compressor/source/: Argument.c  Huffman_definitions.c  Huffmanh_Compressor.c
Huffman_Compressor/test_files/: faroest.hf  letra faroeste caboclo.txt
Huffman_Compressor/tests/: Huffmanh_Compressor.c
